Thu Dec  4 09:52:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3506_Regression/IF_EXE_M_R_Enums.idl:
          Fixed HPUX compile problems

Wed Dec  3 22:20:51 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * orbsvcs/orbsvcs/AV/SCTP_SEQ.cpp:
          Fix variable length array error. Replaced with ACE_Array<>.

Wed Dec 03 18:11:39 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/tests/InterfaceRepo/IFR_Self_Recursive_IDL_Test/client.cpp:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Recursive_IDL_Test/GoodDay.cpp:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Recursive_IDL_Test/GoodDay.h:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Recursive_IDL_Test/server.cpp:
        Compilation fixes.

        * configure.ac:
        * orbsvcs/tests/InterfaceRepo/Makefile.am:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Recursive_IDL_Test/Makefile.am:
        Add test to be built by autoconf.

Wed Dec  3 09:22:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Naming/Naming_Server.cpp:
          Set all object references to nil in the fini method

        * orbsvcs/orbsvcs/Naming/Transient_Naming_Context.cpp:
          Layout changes

        * orbsvcs/tests/Bug_1334_Regression/client.cpp:
          Removed ACE_UNUSED_ARG usage

Wed Dec  3 08:09:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IIOP_Connector.cpp:
          Layout changes

        * tao/IORInterceptor/IORInterceptor_Adapter_Impl.cpp:
          Const changes

        * tao/TAO_Singleton.h:
        * tao/TAO_Singleton_Manager.h:
          Doxygen changes

        * tao/TAO_Singleton_Manager.cpp (fini):
          When we have been registered with the ACE object manager
          then unregister ourselves again. If we keep registered
          and the TAO DLL gets unloaded ACE will crash when trying
          to callback to us

Wed Dec  3 06:55:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
