@@ -1,3 +1,8 @@
+Thu Dec  4 18:41:20 UTC 2008  Ciju John  <johnc at ociweb dot com>
+
+        * orbsvcs/orbsvcs/AV/SCTP_SEQ.cpp:
+          Further SunCC errors. A heap allocated array should fix this.
+
 Thu Dec  4 09:52:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Bug_3506_Regression/IF_EXE_M_R_Enums.idl:
